[tool.poetry]
name = "proxy-parse"
version = "1.0.1"
description = "Easy-to-use sync library for handy parsing of proxies"
authors = ["krilifon <krilifongd@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/krilifon/proxy-parse"
repository = "https://github.com/krilifon/proxy-parse"
keywords = [
  "proxy",
  "parse",
  "proxy-parse",
  "proxies",
  "sync",
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
packages = [
    {include = "proxy_parse"},
]

[tool.poetry.dependencies]
python = "^3.7"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
Scrapy = "^2.5.1"
pytest = "^6.2.5"
black = "^21.11b1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
